| Bug #1096 | mysqlbinlog does not comment the original LOAD DATA INFILE is it has a "use xx" | ||
|---|---|---|---|
| Submitted: | 19 Aug 2003 6:33 | Modified: | 19 Aug 2003 6:54 |
| Reporter: | Guilhem Bichot | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 4.0 | OS: | Any (all) |
| Assigned to: | Guilhem Bichot | Target Version: | |
[19 Aug 2003 6:33]
Guilhem Bichot
[19 Aug 2003 6:47]
Guilhem Bichot
Thank you for your bug report. This issue has been committed to our
source repository of that product and will be incorporated into the
next release.
If necessary, you can access the source repository and build the latest
available version, including the bugfix, yourself. More information
about accessing the source trees is available at
http://www.mysql.com/doc/en/Installing_source_tree.html
ChangeSet@1.1573, 2003-08-19 15:46:47+02:00, guilhem@mysql.com
